--- a/CLIENT/src/app/app.component.html
+++ b/CLIENT/src/app/app.component.html
@@ -1,3 +1,6 @@
-<navbar></navbar>
-<router-outlet></router-outlet>
-<footer></footer>
+<div>
+  <navbar></navbar>
+  <auth-modal></auth-modal>
+  <router-outlet></router-outlet>
+  <footer></footer>
+</div>
