some minor changes

--- a/CLIENT/src/app/app.component.html
+++ b/CLIENT/src/app/app.component.html
@@ -1,6 +1,5 @@
-<div>
+<div class="h-[100vh]">
   <navbar></navbar>
   <auth-modal></auth-modal>
   <router-outlet></router-outlet>
-  <footer></footer>
 </div>
