--- a/CLIENT/src/app/Components/AllProducts/all-products.component.html
+++ b/CLIENT/src/app/Components/AllProducts/all-products.component.html
@@ -1,16 +1,20 @@
-<div class="overflow-auto max-h-[83vh]" >
-    <div class="p-3 grid grid-cols-4 gap-4">
-        <div *ngFor="let item of products" class="flex flex-col gap-2 border p-2 cursor-pointer" (click)="productPage(item)">
-          <p class="text-2xl text-center">{{ item.name }}</p>
-          <img class="h-[200px] rounded-lg" [src]="item.image" alt="No-Image" />
-          <div class="flex justify-around">
-            <p>Price: {{ item.price }}</p>
-            <p>Brand: {{ item.brand }}</p>
-          </div>
-          <div class="flex justify-around">
-            <p>{{ item.likesCount }} <i class="fa fa-heart"></i></p>
-            <p>{{ item.numOfReviews }} <i class="fa fa-comment"></i></p>
-          </div>
-        </div>
+<div class="overflow-auto h-full">
+  <div class="p-3 grid grid-cols-4 gap-4">
+    <div
+      *ngFor="let item of products"
+      class="flex flex-col gap-2 border p-2 cursor-pointer"
+      (click)="productPage(item)"
+    >
+      <p class="text-2xl text-center">{{ item.name }}</p>
+      <img class="h-[200px] rounded-lg" [src]="item.image" alt="No-Image" />
+      <div class="flex justify-around">
+        <p>Price: {{ item.price }}</p>
+        <p>Brand: {{ item.brand }}</p>
       </div>
+      <div class="flex justify-around">
+        <p>{{ item.likesCount }} <i class="fa fa-heart"></i></p>
+        <p>{{ item.numOfReviews }} <i class="fa fa-comment"></i></p>
+      </div>
+    </div>
+  </div>
 </div>
