--- a/CLIENT/src/app/Screens/Checkout Screen/checkout-screen.component.html
+++ b/CLIENT/src/app/Screens/Checkout Screen/checkout-screen.component.html
@@ -8,7 +8,7 @@
     <br />
     <br />
     <div class="flex flex-col justify-center items-center gap-8">
-        <button class="bg-blue-200 p-2 rounded-md" (click)="checkout()">Checkout</button>
+        <button class="bg-blue-200 hover:bg-blue-500 p-2 rounded-md" (click)="checkout()">Checkout</button>
     </div>
     
 </div>
