--- a/CLIENT/src/app/Screens/Product Screen/product-screen.component.html
+++ b/CLIENT/src/app/Screens/Product Screen/product-screen.component.html
@@ -1,49 +1,81 @@
-<div class="overflow-scroll max-h-[83vh] overflow-x-hidden">
-    <div class="w-100 h-[60vh] flex p-5 gap-5">
-        <div class="p-2 flex flex-col gap-5 flex-1 items-center">
-            <label class="text-3xl">{{ product.name }}</label>
-            <img [src]="product.image" width="300" class="h-[300px]"/>
-            <div class="flex gap-10">
-                <p>{{product.likesCount}} <i (click)="likeProduct()" class="far fa-heart cursor-pointer" *ngIf="!likedByMe"></i><i class="fa fa-heart" *ngIf="likedByMe"></i></p>
-                <p>{{product.numOfReviews}} <i class="fa fa-comment"></i></p>
-            </div>
-        </div>
-    
-        <div class="p-2 flex flex-col flex-1">
-            <p class="h-[80%]">{{product.desc}}</p>
-            <div class="flex justify-between items-center">
-                <p>Brand: {{product.brand}}</p>
-                <p>Sold By: {{product.soldBy}}</p>
-                <p>Category: {{product.category}}</p>
-            </div>
-            <div class="flex justify-between items-center">
-                <p>Sold: {{product.sold || 0}}</p> 
-                <p>In Stock: {{product.stock}}</p>
-                <p>Ratings: {{product.ratings}}</p>
-            </div>
-            <br class="mt-5"/>
-            <div class="flex gap-3 justify-end items-center p-3">
-                <input #cartItems type="number" class="rounded-md w-[10%] h-full border p-2" min="0" [max]="product.stock" (change)="onChangeCartItems(cartItems)" />
-                <button class="rounded-lg bg-blue-400 p-2 text-white" (click)="addToCart()" >Add to Cart</button>
-            </div>
-        </div>
+<div>
+  <div class="w-100 h-[60vh] flex p-5 gap-5">
+    <div class="p-2 flex flex-col gap-5 flex-1 items-center">
+      <label class="text-3xl">{{ product.name }}</label>
+      <img [src]="product.image" width="300" class="h-[300px]" />
+      <div class="flex gap-10">
+        <p>
+          {{ product.likesCount }}
+          <i
+            (click)="likeProduct()"
+            class="far fa-heart cursor-pointer"
+            *ngIf="!likedByMe"
+          ></i
+          ><i class="fa fa-heart" *ngIf="likedByMe"></i>
+        </p>
+        <p>{{ product.numOfReviews }} <i class="fa fa-comment"></i></p>
+      </div>
     </div>
-    
-    <div class="border"></div>
-    
-    <div class="p-3 flex justify-between">
-        <div class="flex flex-1 flex-col">
-            <p class="text-2xl">Reviews</p>
-            <div class="flex gap-2 ml-4" *ngFor="let review of product.reviews" >
-                <p class="font-bold" >{{ review.name }}:</p>
-                <p>{{ review.comment }}</p>
-            </div>
-        </div>
-    
-        <div class="flex flex-1 flex-col gap-2">
-            <p>Add your review!</p>
-            <textarea #review type="text" rows="3" class="border p-2" (change)="updateValue(review)"></textarea>
-            <button class="rounded-lg p-2 bg-blue-50" (click)="addReview()" >Add Review</button>
-        </div>
+
+    <div class="p-2 flex flex-col flex-1">
+      <p class="h-[80%]">{{ product.desc }}</p>
+      <div class="flex justify-between items-center">
+        <p>Brand: {{ product.brand }}</p>
+        <p>Sold By: {{ product.soldBy }}</p>
+        <p>Category: {{ product.category }}</p>
+      </div>
+      <div class="flex justify-between items-center">
+        <p>Sold: {{ product.sold || 0 }}</p>
+        <p>In Stock: {{ product.stock }}</p>
+        <p>Ratings: {{ product.ratings }}</p>
+      </div>
+      <br class="mt-5" />
+      <div class="flex gap-3 justify-end items-center p-3">
+        <input
+          #cartItems
+          type="number"
+          class="rounded-md w-[10%] h-full border p-2"
+          min="0"
+          [max]="product.stock"
+          (change)="onChangeCartItems(cartItems)"
+        />
+        <button
+          class="rounded-lg bg-blue-400 hover:bg-blue-600 p-2 text-white"
+          (click)="addToCart()"
+        >
+          Add to Cart
+        </button>
+      </div>
     </div>
+  </div>
+
+  <div class="border"></div>
+
+  <div class="p-3 flex justify-between">
+    <div class="flex flex-1 flex-col">
+      <p class="text-2xl">Reviews</p>
+      <div class="flex gap-2 ml-4" *ngFor="let review of product.reviews">
+        <p class="font-bold">{{ review.name }}:</p>
+        <p>{{ review.comment }}</p>
+      </div>
+    </div>
+
+    <div class="flex flex-1 flex-col gap-2">
+      <p>Add your review!</p>
+      <textarea
+        #review
+        type="text"
+        rows="3"
+        class="border p-2"
+        [value]="myReview"
+        (change)="updateValue(review)"
+      ></textarea>
+      <button
+        class="rounded-lg p-2 bg-blue-50 hover:bg-blue-400"
+        (click)="addReview()"
+      >
+        Add Review
+      </button>
+    </div>
+  </div>
 </div>
